<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@id/txtArtist"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/artistDummy"
        android:textIsSelectable="false"
        android:maxLines="1" />

    <TextView
        android:id="@id/txtTitle"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtArtist"
        android:text="@string/titleDummy"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:maxLines="1" />

</RelativeLayout>