...

    <!-- errors -->
    <string name="error_initialize_player">Fehler beim Erstellen des Players</string>
    <string name="error_player32">AAC+ Decoder-Fehler</string>

    <!-- standard text -->
    <string name="ok">OK</string>
    <string name="abort">Abbruch</string>
    <string name="back">Zurück</string>
    <string name="next">Weiter</string>
    <string name="empty"></string>
    <string name="attention">Achtung</string>
    <string name="no">Nein</string>
...
    <string name="settings_audio_buffer">Audio-Puffer</string>
    <string name="settings_decoding_buffer">Decoding-Puffer</string>
    <string name="settings_buffer_hint">Kapazität in ms:</string>

    <!-- favorites -->
    <string-array name="favorite_options_array">
        <item>Wünschen</item>
        <item>Auf YouTube suchen</item>
        <item>Teilen</item>
        <item>Löschen</item>
    </string-array>

    <string name="menu_deleteall">Alle löschen</string>
...
