<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_add_manually"
        android:icon="@drawable/ic_content_new_dark"
        app:showAsAction="always"
        android:title="@string/menu_add_mannually" />
    <item
        android:id="@+id/mnu_shareall"
        android:icon="@drawable/ic_social_share_dark"
        app:showAsAction="ifRoom"
        android:title="@string/menu_shareall" />
    <item
        android:id="@+id/mnu_deleteall"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_deleteall" />

</menu>